# kishu

./: .gitattributes  .gitignore  .readthedocs.yml  CONTRIBUTING.md  ElasticNotebook.py  Notebook_Runner_EP.py  README.md  package-lock.json  requirements.txt
.github/workflows/: .test-kishu.yml.swp  codecov.yml  jupyterlab_kishu.yml  kishu.yml  python-package.yml  release.yml  test-kishu.yml
docs/: .gitignore  README.md  conf.py  index.rst  requirements.txt
docs/src/: api.rst  conf.py  index.rst  installation.rst  instructions.rst  supported_libraries.rst  unsupported_cases.rst  usage.rst
elastic/: __init__.py  tmp_test_file
elastic/algorithm/: baseline.py  graph_construction.py  node_creation.py  optimizer_exact.py  optimizer_greedy.py  selector.py
elastic/change/: c_idgraph.py  idgraphmodule.c  setup.py
elastic/core/: container.py  event.py  record_event.py
elastic/examples/: magic.ipynb  magic_restore.ipynb  numpy.ipynb  numpy_gc_test.ipynb  (+6 more)
experiment/: migrate.py
jupyterlab_kishu/: Makefile  package.json  pyproject.toml
kishu/: .gitignore  Makefile  README.md  coverage.xml  dev-requirements.txt  myfile.txt  nbexec.py  print_versions.py  pyproject.toml  requirements.txt  setup.py  test_notebooks.txt  test_notebooks2.txt  upload2pypi.sh
kishuboard/: Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
timetravel_fe/: README.md  package-lock.json  package.json
watchdog/: README.md  pyproject.toml
watchdog/tests/: test_capture.py  test_delta.py  test_state.py
watchdog/watchdog/: capture.py  delta.py  state.py
(+521 files in other folders)
