[build-system]
requires = ["setuptools", "setuptools-scm", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# package-dir = { "" = "watchdog" }
packages = ["watchdog"]

[project]
name = "watchdog"
authors = [
    {name = "Yongjoo Park", email = "yongjoo@g.illinois.edu"},
    {name = "Supawit Chockchowwat", email = "supawit2@illinois.edu"},
    {name = "Zhaoheng Li", email = "zl20@illinois.edu"},
]
description = "Transactional Python"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "watchdog", "dart", "python", "t-python", "transactional python", "cli"
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
version = "0.1.0"  # README: Keep in sync with kishu/__init__.py
dependencies = [
    "dill",
    "loguru",
    "typing",
]

[project.optional-dependencies]
dev = [
    # Development tools
    "flake8",
    "mypy",
    "pytest",
    "pytest-cov",
]


[project.scripts]
kishu = "watchdog.capture:main"

[project.urls]
repository = "https://github.com/illinoisdata/kishu"
